--- a/package.json
+++ b/package.json
@@ -30,15 +30,14 @@
   "devDependencies": {
     "rollup": "^2.69.0",
     "rollup-plugin-dts": "^4.1.0",
-    "typescript": "^4.6.2"
+    "typescript": "^4.6.2",
+    "@rollup/plugin-typescript": "^8.3.1"
   },
   "dependencies": {
     "@codemirror/language": "^0.19.7",
     "@codemirror/state": "^0.19.6",
     "@codemirror/view": "^0.19.40",
     "@lezer/common": "^0.15.11",
-    "@lezer/lr": "^0.15.7",
-    "@rollup/plugin-typescript": "^8.3.1",
-    "parser-tablature": "github:tab-edit/parser-tablature"
+    "@lezer/lr": "^0.15.7"
   }
 }
