--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "codemirror 6 extension to generate an ast for music tablature",
   "main": "dist/index.js",
   "scripts": {
-    "build": "tsc --build && rollup -c rollup.config.js",
+    "build": "rollup -c rollup.config.js",
     "test": "jest"
   },
   "jest": {
