--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@rollup/plugin-typescript": "^8.3.1",
     "@types/jest": "^27.4.1",
     "jest": "^27.5.1",
+    "parser-tablature": "github:tab-edit/parser-tablature",
     "rollup": "^2.69.0",
     "rollup-plugin-dts": "^4.1.0",
     "ts-jest": "^27.1.3",
@@ -46,8 +47,8 @@
   "dependencies": {
     "@codemirror/language": "^0.20.0",
     "@codemirror/state": "^0.20.0",
+    "@codemirror/view": "^0.20.4",
     "@types/object-hash": "^2.2.1",
-    "object-hash": "^3.0.0",
-    "parser-tablature": "github:tab-edit/parser-tablature"
+    "object-hash": "^3.0.0"
   }
 }
