--- a/package.json
+++ b/package.json
@@ -5,18 +5,8 @@
   "main": "dist/index.js",
   "scripts": {
     "build": "rollup -c rollup.config.js",
-    "test": "jest"
-  },
-  "jest": {
-    "transform": {
-      ".(ts|tsx)": "ts-jest"
-    },
-    "testRegex": "(/__tests__/.*|\\.(test|spec))\\.(ts|tsx|js)$",
-    "moduleFileExtensions": [
-      "ts",
-      "tsx",
-      "js"
-    ]
+    "test": "jest",
+    "testdebug": "node --inspect-brk ./node_modules/jest/bin/jest -i"
   },
   "repository": {
     "type": "git",
@@ -38,10 +28,10 @@
     "@rollup/plugin-typescript": "^8.3.1",
     "@types/jest": "^27.4.1",
     "jest": "^27.5.1",
-    "parser-tablature": "github:tab-edit/parser-tablature",
     "rollup": "^2.69.0",
     "rollup-plugin-dts": "^4.1.0",
-    "ts-jest": "^27.1.3",
+    "ts-jest": "^27.1.5",
+    "ts-node": "^10.8.2",
     "typescript": "^4.6.2"
   },
   "dependencies": {
@@ -49,6 +39,7 @@
     "@codemirror/state": "^0.20.0",
     "@codemirror/view": "^0.20.4",
     "@types/object-hash": "^2.2.1",
-    "object-hash": "^3.0.0"
+    "object-hash": "^3.0.0",
+    "parser-tablature": "github:tab-edit/parser-tablature"
   }
 }
